<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_name" />

        <EditText
            android:id="@+id/et_login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_pswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_pswd" />

        <EditText
            android:id="@+id/et_login_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </EditText>
    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_login_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_rem" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="54dp"
            android:onClick="cancelCourse"
            android:text="@string/bt_cancel" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="52dp"
            android:onClick="loginCourse"
            android:text="@string/bt_login" />

    </RelativeLayout>

</LinearLayout>